Align content issue fixed

--- a/static/style/home.scss
+++ b/static/style/home.scss
@@ -15,11 +15,11 @@
 		border-radius: 4px;
 		margin: 10px 0;
 	}
-	
+
 	.content {
 		display: flex;
 		flex-wrap: nowrap;
-		justify-content: space-between;
+		justify-content: flex-start;
 
 		.section-title {
 			display: block;
